--- a/_posts/python/2018-1-4-舆情分析-5.md
+++ b/_posts/python/2018-1-4-舆情分析-5.md
@@ -250,3 +250,6 @@ config文件信息如下：
 # 4. flow说明
 
    ![](https://i.imgur.com/vAXDPGi.png)
+   
+   
+Github源码下载地址，点击[这里](https://github.com/vivianking6855/bigdata/tree/master/python)
