--- a/_posts/python/2018-1-4-舆情分析-6.md
+++ b/_posts/python/2018-1-4-舆情分析-6.md
@@ -45,3 +45,6 @@ comments: true
         # 去除数字
         content = re.sub("\d+", "", content)
         data = jieba.analyse.extract_tags(content, topK=TOPK, withWeight=True)
+
+
+Github源码下载地址，点击[这里](https://github.com/vivianking6855/bigdata/tree/master/python)
