--- a/_posts/2018-3-16-知识News.md
+++ b/_posts/2018-3-16-知识News.md
@@ -25,6 +25,7 @@ comments: true
     - 鸿样
     - stormzhang
 - 知名博客
+    - [Android 开发技术周报](https://androidweekly.io/)
     - [CSDN](http://blog.csdn.net/column.html)
     - [Android官网博客 Android Developers Blog](http://android-developers.blogspot.com/) 
 - 开源学习资料
