--- a/_posts/company/2018-3-8-个人使命宣言.md
+++ b/_posts/company/2018-3-8-个人使命宣言.md
@@ -12,6 +12,7 @@ comments: true
 
 自己想成为怎样的人（品德）和想要怎样的事业，自我定位（贡献和成就）
 
+
 - 家庭第一
 - 坚守诚信
 - 感恩帮助自己的每一个人
@@ -20,12 +21,18 @@ comments: true
 - 诚恳但立场坚定
 - 保持积极主动
 - 逐步实现经济独立，除了车、房贷款，不为日常消费借款，定期存款或利用部分收入投资
+
+---
+
+- 向全栈架构师发展
 - 每年准备年度目标，定时更新进度
-- 每天回顾今天的工作，计划明天的工作，维护每日工作清单
-- 利用每个碎片的空闲时间
 - 每年掌握一种新技能
-- 多请教别人，多分享
+- OKR工作法，计划每月，每周，每天的工作。维护每日工作清单
+- 每天回顾，总结今天的工作
+- 利用每个碎片的空闲时间
+- 多请教别人，多分享，多总结，多思考
 - 专注于当前的工作，不为下一次任务或提升瞎操心
+
 
 
 # Reference
