--- a/_posts/2018-3-16-知识News.md
+++ b/_posts/2018-3-16-知识News.md
@@ -14,33 +14,25 @@ comments: true
 
 
 
-# Android 动态资讯
+# 动态资讯
 ---
 
-- 圈内动态： 知乎, 脉脉，棱镜
-- 技术社区： CSDN，Github, SegmentFault, stackoverflow，腾讯云社区，简书
+- 圈内动态： [知乎](https://www.zhihu.com/), [脉脉](https://maimai.cn/im/)，[棱镜](http://finance.qq.com/prism.htm)
+- 技术社区： 
+	- [CSDN](https://www.csdn.net/)
+	- [Github](https://github.com/)
+	- [SegmentFault](https://segmentfault.com/feed) 
+	- [stackoverflow](https://stackoverflow.com/)
+	- [腾讯云社区](https://cloud.tencent.com/developer/column)
+	- [简书](https://www.jianshu.com/)
 - 公众号
     - 腾讯Bugly
     - 阿里技术
     - 鸿样
-    - stormzhang
 - 知名博客
     - [Android 开发技术周报](https://androidweekly.io/)
     - [CSDN](http://blog.csdn.net/column.html)
     - [Android官网博客 Android Developers Blog](http://android-developers.blogspot.com/) 
-- 开源学习资料
-    - 开源库
-        - [Anroid开源库 TimLiu](https://github.com/Tim9Liu9/TimLiu-Android)
-        - [2017年Android百大框架排行榜](https://www.cnblogs.com/jincheng-yangchaofan/articles/7018780.html)
-        - [Android库收集](https://github.com/wasabeef/awesome-android-libraries)
-        - [Android 开发人员不得不收集的代码](https://github.com/Blankj/AndroidUtilCode)
-    - 学习资料
-        - [google samples](https://github.com/googlesamples)
-        - [LearningNotes](https://github.com/francistao/LearningNotes)
-        - [Android 学习资料收集](https://github.com/Freelander/Android_Data)  
-        - [android学习之路 ](http://stormzhang.com/android/2014/07/07/learn-android-from-rookie/)
-        - [开源项目源码解析地址](http://p.codekk.com)
-        - [Android 开源项目分类汇总](https://github.com/Trinea/android-open-project)
 
 
 # 科技，生活资讯拓展
@@ -50,22 +42,3 @@ comments: true
 - [财经郎眼 ](http://www.iqiyi.com/a_19rrgu9qmt.html)
 - [TED](http://www.ted.com) 
 - [TED 网易公开课](https://open.163.com/ted/) 
-
-# ReactNative
----
-
-- Blog
-    - [Vivian RN 知识储备](http://vivianking6855.github.io/2016/05/24/rn-environment-post/)
-    - [Vivian RN Awesome](http://vivianking6855.github.io/2016/05/25/rn-awesome/)
-    - [React-Native-lesson](https://github.com/vczero/react-native-lesson)
-
-# JS,HTML,CSS
--------------
-
-- 课程
-    - [W3C Scholl](http://www.w3school.com.cn/)
-
-# IOS 学习资料
---------------
-
-trip-to-iOS：[https://github.com/Aufree/trip-to-iOS](https://github.com/Aufree/trip-to-iOS)
