--- a/_posts/company/2018-3-8-个人使命宣言.md
+++ b/_posts/company/2018-3-8-个人使命宣言.md
@@ -1,20 +1,20 @@
 ---
 layout: post
 title: 个人使命宣言
-date: 2018-3-8
+date: 2018-5-22
 excerpt: "个人使命宣言"
 tags: [其他]
 comments: true
 ---
 
     
-# 个人使命宣言
+# 个人使命宣言 （更新于2018/5/22)
 
 自己想成为怎样的人（品德）和想要怎样的事业，自我定位（贡献和成就）
 
 
 - 家庭第一
-- 坚守诚信
+- 坚守诚信，正直
 - 感恩帮助自己的每一个人
 - 努力做到不迁怒，不贰过
 - 征求他人的意见，未听取双方意见，不妄下断语
@@ -24,17 +24,22 @@ comments: true
 
 ---
 
-- 向全栈架构师发展
+- 向全栈架构师发展，在架构师领域有一定的影响
 - 每年准备年度目标，定时更新进度
 - 每年掌握一种新技能
-- OKR工作法，计划每月，每周，每天的工作。维护每日工作清单
-- 每天回顾，总结今天的工作
+- 维护工作清单：月/周/天，定期更新，总结（OKR工作法）
 - 利用每个碎片的空闲时间
 - 多请教别人，多分享，多总结，多思考
-- 专注于当前的工作，不为下一次任务或提升瞎操心
+- 深度工作，专注于当前任务，不为下一次任务或提升瞎操心
 
 
 
 # Reference
 
 《高效人士的七个习惯》
+
+《深度工作》
+
+《穷查理宝典》
+
+《思考，快与慢》
