--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -35,3 +35,9 @@ comments: true
     - 上了麦就要带好耳机对着话筒发言了，或者播放机器里的歌或在线网页上的歌。
     - 时间到了就自然下麦了或者时间还没到，自己点一下放麦，就自动下麦了。
     - 控麦一版是管理员控制
+
+# 服务器
+
+- CMS是"Content Management System"的缩写，意为"内容管理系统"。 
+	
+	内容管理系统是企业信息化建设和电子政务的新宠，也是一个相对较新的市场
