--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -41,3 +41,14 @@ comments: true
 - CMS是"Content Management System"的缩写，意为"内容管理系统"。 
 	
 	内容管理系统是企业信息化建设和电子政务的新宠，也是一个相对较新的市场
+
+- ORM 对象关系映射（英语：(Object Relational Mapping，简称ORM，或O/RM，或O/R mapping）用于实现面向对象编程语言里不同类型系统的数据之间的转换。
+
+	例如Laravel中的数据库的处理就是使用ORM模式
+
+# 协议
+
+- URI：uniform resource identifier 统一资源标识符，用来唯一的标识一个资源
+
+		file://a:1234/b/c/d.txt
+
