--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -48,7 +48,13 @@ comments: true
 
 # 协议
 
-- URI：uniform resource identifier 统一资源标识符，用来唯一的标识一个资源
+- URI： uniform resource identifier 统一资源标识符，用来唯一的标识一个资源
 
 		file://a:1234/b/c/d.txt
+
+- URL： uniform resource locator 统一资源定位器，是一种具体的URI。
+	- URL可以用来表示一个资源
+	- 还指明了如何locate这个资源
+	
+
 
