add some Internet words and blog config

--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -55,6 +55,21 @@ comments: true
 - URL： uniform resource locator 统一资源定位器，是一种具体的URI。
 	- URL可以用来表示一个资源
 	- 还指明了如何locate这个资源
+
+
+# 软件
+
+- OOP：Object Oriented Programming 面向对象编程
+	- OOP是一种方法论，看待实物的方法和思维
+- FP : Functional Programming 函数式编程
+	- 可以把复杂任务分解成简单的任务，这种分解可以称之为面向过程的程序设计。函数就是面向过程的程序设计的基本单元。
+	- 虽然也可以归结到面向过程的程序设计，但其思想更接近数学计算。
+	- 函数式编程就是一种抽象程度很高的编程范式
+- AOP：Aspect Oriented Programming 面向切面编程
+	- 是函数式编程的衍生泛型
+	- 利用AOP可以对业务逻辑的各个部分进行隔离，降低业务逻辑耦合度
+	- AOP是一种方法论，看待实物的方法和思维
+	- 应用场景例如：日志记录，统计打点，性能监控，数据校验，权限检查，异常处理等
 	
 
 
