--- a/_posts/company/2018-3-8-个人使命宣言.md
+++ b/_posts/company/2018-3-8-个人使命宣言.md
@@ -8,7 +8,7 @@ comments: true
 ---
 
     
-# 个人使命宣言 （更新于2018/5/22)
+# 个人使命宣言 （更新于2018/6/21)
 
 自己想成为怎样的人（品德）和想要怎样的事业，自我定位（贡献和成就）
 
@@ -24,7 +24,7 @@ comments: true
 
 ---
 
-- 向全栈架构师发展，在架构师领域有一定的影响
+- 向大数据方向发展，大数据领域有一定的影响，尽力对社会做出贡献
 - 每年准备年度目标，定时更新进度
 - 每年掌握一种新技能
 - 维护工作清单：月/周/天，定期更新，总结（OKR工作法）
