--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -69,7 +69,8 @@ comments: true
 	- 是函数式编程的衍生泛型
 	- 利用AOP可以对业务逻辑的各个部分进行隔离，降低业务逻辑耦合度
 	- AOP是一种方法论，看待实物的方法和思维
-	- 应用场景例如：日志记录，统计打点，性能监控，数据校验，权限检查，异常处理等
-	
-
+	- 应用场景例如：日志记录，统计打点，性能监控，数据校验，权限检查，异常处理等	
+- [RAD](https://baike.baidu.com/item/%E5%BF%AB%E9%80%9F%E5%BA%94%E7%94%A8%E5%BC%80%E5%8F%91/206653?fr=aladdin)快速应用开发（Rapid Application Development）
+	- 不仅是一种需求抽取方法，它还是是软件开发为一体的方法
+	- 快速应用开发目的是快速发布系统方案，而技术上的优美相对发布的速度来说是次要的。
 
