--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -9,9 +9,14 @@ comments: true
 
 
 
-# 术语
+# 前言
 
 互联网，AI，BigData等领域需要了解的一些术语
+
+# 公司
+
+- [IPO](https://baike.baidu.com/item/%E9%A6%96%E6%AC%A1%E5%85%AC%E5%BC%80%E5%8B%9F%E8%82%A1/52072?fromtitle=IPO&fromid=210299&fr=aladdin)首次公开募股（Initial Public Offerings）：是指一家企业或公司 （股份有限公司）第一次将它的股份向公众出售。用于企业上市。
+
 
 # 互联网
 
@@ -57,7 +62,7 @@ comments: true
 	- 还指明了如何locate这个资源
 
 
-# 软件
+# 软件工程
 
 - OOP：Object Oriented Programming 面向对象编程
 	- OOP是一种方法论，看待实物的方法和思维
@@ -73,4 +78,6 @@ comments: true
 - [RAD](https://baike.baidu.com/item/%E5%BF%AB%E9%80%9F%E5%BA%94%E7%94%A8%E5%BC%80%E5%8F%91/206653?fr=aladdin)快速应用开发（Rapid Application Development）
 	- 不仅是一种需求抽取方法，它还是是软件开发为一体的方法
 	- 快速应用开发目的是快速发布系统方案，而技术上的优美相对发布的速度来说是次要的。
+- [RUP](https://baike.baidu.com/item/RUP/8924595?fr=aladdin) 统一开发过程 （Rational Unified Process):面向对象且基于网络的程序开发方法论
+- EHM: Engineering Hierarchy Model 软件工程层状模型
 
