add big data learn one

--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -13,6 +13,13 @@ comments: true
 
 互联网，AI，BigData等领域需要了解的一些术语
 
+# 云存储，云计算
+
+- [yarn](https://baike.baidu.com/item/yarn/16075826?fr=aladdin)另一种资源协调者（Yet Another Resource Negotiator）是一种新的 Hadoop 资源管理器，它是一个通用资源管理系统，可为上层应用提供统一的资源管理和调度.
+- 富媒体：Rich Media。不是一种具体的互联网媒体形式。富媒体包含流媒体、声音、Flash、以及Java、Javascript、DHTML等程序设计语言的形式之一或者几种的组合
+- RTMP是Real Time Messaging Protocol（实时消息传输协议）的首字母缩写。该协议基于TCP，是一个协议族，
+- QUIC 推流方案如何实现直播 0 卡顿。 Quick UDP Internet Connection
+
 # 公司
 
 - [IPO](https://baike.baidu.com/item/%E9%A6%96%E6%AC%A1%E5%85%AC%E5%BC%80%E5%8B%9F%E8%82%A1/52072?fromtitle=IPO&fromid=210299&fr=aladdin)首次公开募股（Initial Public Offerings）：是指一家企业或公司 （股份有限公司）第一次将它的股份向公众出售。用于企业上市。
@@ -25,12 +32,6 @@ comments: true
     - +互联网强调顺势创新，是传统行业以既有业务为基础利用互联网技术和理念来提高为用户服务的效率和质量。
 - 互联网+：就是“互联网+各个传统行业”，利用信息通信技术以及互联网平台，让互联网与传统行业进行深度融合，创造新的发展生态。
     - 它代表一种新的社会形态，即充分发挥互联网在社会资源配置中的优化和集成作用，将互联网的创新成果深度融合于经济、社会各域之中，提升全社会的创新力和生产力，形成更广泛的以互联网为基础设施和实现工具的经济发展新形态
-
-# 云存储，云计算
-
-- 富媒体：Rich Media。不是一种具体的互联网媒体形式。富媒体包含流媒体、声音、Flash、以及Java、Javascript、DHTML等程序设计语言的形式之一或者几种的组合
-- RTMP是Real Time Messaging Protocol（实时消息传输协议）的首字母缩写。该协议基于TCP，是一个协议族，
-- QUIC 推流方案如何实现直播 0 卡顿。 Quick UDP Internet Connection
 
 # 直播
 
