--- a/_posts/company/2018-3-8-个人使命宣言.md
+++ b/_posts/company/2018-3-8-个人使命宣言.md
@@ -12,26 +12,29 @@ comments: true
 
 自己想成为怎样的人（品德）和想要怎样的事业，自我定位（贡献和成就）
 
+---
 
 - 家庭第一
-- 坚守诚信，正直
-- 感恩帮助自己的每一个人
-- 努力做到不迁怒，不贰过
-- 征求他人的意见，未听取双方意见，不妄下断语
-- 诚恳但立场坚定
-- 保持积极主动
 - 逐步实现经济独立，除了车、房贷款，不为日常消费借款，定期存款或利用部分收入投资
+- 每天锻炼，保持身体健康
+- 每周1小时时间联络朋友和家人
 
 ---
 
+- 坚守诚信，正直，诚恳但立场坚定
+- 感恩帮助自己的每一个人
+- 征求他人的意见，未听取双方意见，不妄下断语
+- 保持积极主动
+- 持续修炼仁义礼智信，持续修炼正念
+
+---
+
+- 深度工作，专注于当前任务，不为下一次任务或提升瞎操心
 - 向大数据方向发展，大数据领域有一定的影响，尽力对社会做出贡献
-- 每年准备年度目标，定时更新进度
 - 每年掌握一种新技能
 - 维护工作清单：月/周/天，定期更新，总结（OKR工作法）
-- 利用每个碎片的空闲时间
+- 利用每个碎片的空闲时间学习
 - 多请教别人，多分享，多总结，多思考
-- 深度工作，专注于当前任务，不为下一次任务或提升瞎操心
-
 
 
 # Reference
@@ -43,3 +46,5 @@ comments: true
 《穷查理宝典》
 
 《思考，快与慢》
+
+《正念的奇迹》
