--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -15,6 +15,7 @@ comments: true
 
 # 云存储，云计算
 
+- [EMR](https://aws.amazon.com/cn/emr/)：Amazon弹性MapReduce
 - [yarn](https://baike.baidu.com/item/yarn/16075826?fr=aladdin)另一种资源协调者（Yet Another Resource Negotiator）是一种新的 Hadoop 资源管理器，它是一个通用资源管理系统，可为上层应用提供统一的资源管理和调度.
 - 富媒体：Rich Media。不是一种具体的互联网媒体形式。富媒体包含流媒体、声音、Flash、以及Java、Javascript、DHTML等程序设计语言的形式之一或者几种的组合
 - RTMP是Real Time Messaging Protocol（实时消息传输协议）的首字母缩写。该协议基于TCP，是一个协议族，
